[tool.poetry]
name = "nlq"
version = "0.1.0"
description = ""
authors = ["Ryuta-Yamamoto <43087138+Ryuta-Yamamoto@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
